--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,15 @@
-cmake_minimum_required(VERSION 2.8)
-project( main )
+cmake_minimum_required(VERSION 3.0)
+
+# project name and enable C++ support
+project( main LANGUAGES CXX)
+
+# require C++11
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 find_package( OpenCV REQUIRED )
-include_directories( ${OpenCV_INCLUDE_DIRS} )
+add_compile_options(-W)
+include_directories( cpp ${OpenCV_INCLUDE_DIRS} )
 add_executable( main cpp/main.cpp cpp/yolo_cpu.cpp )
 target_link_libraries( main ${OpenCV_LIBS} )
